@@ -86,7 +86,7 @@ public class WrapFactory
             if (staticType == Void.TYPE)
                 return Undefined.instance;
             if (staticType == Character.TYPE)
-                return new Integer(((Character) obj).charValue());
+                return Integer.valueOf(((Character) obj).charValue());
             return obj;
         }
         if (!isJavaPrimitiveWrap()) {
